--- a/src/components/Activity.module.css
+++ b/src/components/Activity.module.css
@@ -62,8 +62,11 @@
 }
 
 .image {
-  width: 100%;
+  max-width: 100%;
+  max-height: 400px;
   display: block;
+  object-fit: contain;
+  margin: 0 auto;
 }
 
 .cardBody {
