--- a/src/components/Awards.module.css
+++ b/src/components/Awards.module.css
@@ -115,8 +115,11 @@
 }
 
 .image {
-  width: 100%;
+  max-width: 100%;
+  max-height: 400px;
   display: block;
+  object-fit: contain;
+  margin: 0 auto;
 }
 
 @media (max-width: 640px) {
