--- a/src/components/Career.module.css
+++ b/src/components/Career.module.css
@@ -31,6 +31,12 @@
   margin-top: 4px;
 }
 
+.location {
+  font-size: 0.85rem;
+  color: var(--color-text-secondary);
+  margin-top: 2px;
+}
+
 .period {
   font-size: 0.85rem;
   color: var(--color-text-secondary);
